--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1 class="headerlinks"><a href="https://github.com/">Github</a></h1>
             <h1 class="headerlinks"><a href="https://github.com/TheTrueMop">Portfolio</a></h1>
-            <h1 class="headerlinks"><a href="https://www.google.com/">Contact</a></h1>
+            <h1 class="headerlinks"><a href="#contact">Contact</a></h1>
         </header>
         
         <div id="space">
